# cookiecutter-python

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: LICENSE.Apache-2.0.txt  LICENSE.BSD-2-Clause.txt  LICENSE.BSD-3-Clause.txt  LICENSE.MIT.txt  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml  docs.yaml  lint.yaml  pr.yaml  release.yaml  test.yaml
{{cookiecutter.project_slug}}/docs/: conf.py  index.md
{{cookiecutter.project_slug}}/tests/: test_import.py
