{%- set license_classifiers = {
  "MIT": "License :: OSI Approved :: MIT License",
  "Apache-2.0": "License :: OSI Approved :: Apache Software License",
  "BSD-2-Clause": "License :: OSI Approved :: BSD License",
  "BSD-3-Clause": "License :: OSI Approved :: BSD License",
  "GPL-2.0-only": "License :: OSI Approved :: GNU General Public Licence v2 (GPLv2)",
  "GPL-3.0-only": "License :: OSI Approved :: GNU General Public Licence v3 (GPLv3)",
  "LGPL-2.0-only": "License :: OSI Approved :: GNU Lesser General Public Licence v2 (LGPLv2)",
  "LGPL-3.0-only": "License :: OSI Approved :: GNU Lesser General Public Licence v3 (LGPLv3)",
} -%}
[project]
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"},
]
license = {text = "{{ cookiecutter.license_spdx }}"}
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_description }}"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
{%- for ver in range(8, 12)%}
  {%- set _, min = cookiecutter.python_version_min.split(".") %}
  {%- set _, max = cookiecutter.python_version_max.split(".") %}
  {%- if ver|int >= min|int and ver|int <= max|int %}
    "Programming Language :: Python :: 3.{{ ver }}",
  {%- endif %}
{%- endfor %}
{%- if cookiecutter.license_spdx in license_classifiers %}
    "{{ license_classifiers[cookiecutter.license_spdx] }}",
{%- endif %}
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
]
readme = "README.md"
dynamic = ["version"]
{%- set _, max = cookiecutter.python_version_max.split(".") %}
requires-python = ">={{ cookiecutter.python_version_min }},<3.{{ max|int + 1 }}"
dependencies = []

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Documentation = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_slug }}"
Source = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Tracker = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"
Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/releases"

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "gitlint>=0.19.1",
    "pre-commit>=3.2.2",
    "python-semantic-release>=7.33.2",
    "ruff>=0.0.262",
]
docs = [
    "furo>=2023.3.27",
    "myst-parser>=1.0.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-autodoc-typehints>=1.23.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx>=6.1.3",
]
test = [
    "pytest>=7.3.1",
]

[tool.pdm.scripts]
install-git-hooks = "pre-commit install --install-hooks"
lint = "pre-commit run --all-files"
test = "pytest"
docs-build = "sphinx-build docs build/docs"
docs-serve = "sphinx-autobuild docs build/docs"

[tool.pdm.scripts.ci-lint]
cmd = [
  "pre-commit", "run",
  "--show-diff-on-failure",
  "--from-ref", "$FROM_REF",
  "--to-ref", "$TO_REF",
]

[tool.pdm.scripts.ci-lint-commits]
cmd = [
  "gitlint",
  "--contrib", "contrib-title-conventional-commits",
  "--ignore", "body-is-missing",
  "--commits", "$FROM_REF..$TO_REF",
]

[tool.pdm.scripts.ci-version]
cmd = "semantic-release print-version --next"

[tool.pdm.scripts.ci-changelog]
cmd = "semantic-release changelog --unreleased"

[tool.pdm.version]
source = "scm"
write_to = "{{ cookiecutter.package_slug }}/__version__.py"
write_template = "__version__ = \"{}\""

[tool.semantic_release]
branch = "main"
version_source = "tag_only"
version_pattern = "d+.d+.d+"
tag_format = "{version}"

[tool.mypy]
strict = true

[tool.ruff]
select = [
  "E",  # pycodestyle
  "W",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
ignore = [
  "E501",  # line-too-long, handled by black
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused-imports

[tool.ruff.isort]
combine-as-imports = true

[tool.pytest.ini_options]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
